# liteserver

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
config/: config.example.yml
src/: liteserver.rs  main.rs  tracing_utils.rs  tvm.rs  utils.rs  web.rs
