[package]
name = "ton-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
broxus-util = { version = "0.2", features = ["signal", "public-ip"] }
ton-indexer = { git = "https://github.com/hacker-volodya/ton-indexer", features = ["ton"] }
tokio = "1"
async-trait = "0.1"
tracing = "0.1"
futures-util = "0.3"
axum = "0.7.2"
ton_block = { git = "https://github.com/broxus/ton-labs-block.git", features = ["ton"] }
prometheus = { version = "0.13.3", features = ["process"] }
ton_liteapi = { git = "https://github.com/tonstack/lite-client", branch = "async" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
tower = { version = "0.4.13" }
hex = "0.4"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
metrics = "0.22.3"
metrics-exporter-prometheus = { version = "0.14.0", default-features = false }
tokio-metrics-collector = { version = "0.2.1", features = ["rt"] }
ureq = "2.9.7"
fs_extra = "1.3.0"
tracing-opentelemetry = "0.16.0"
opentelemetry-jaeger = "0.15.0"
opentelemetry = "0.16"